--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,9 @@ php:
 
 env:
  matrix:
-  - DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
-  - DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
+  - DB=pgsql MOODLE_BRANCH=MOODLE_34_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=pgsql MOODLE_BRANCH=master
-  - DB=mysqli MOODLE_BRANCH=MOODLE_33_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=mysqli MOODLE_BRANCH=master
@@ -35,6 +33,10 @@ matrix:
   - php: 5.6
     env: DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
   - php: 5.6
+    env: DB=mysqli MOODLE_BRANCH=MOODLE_33_STABLE
+  - php: 7.0
+    env: DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
+  - php: 7.0
     env: DB=mysqli MOODLE_BRANCH=MOODLE_33_STABLE
 
 before_install:
