--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,17 @@ env:
   - DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=mysqli MOODLE_BRANCH=master
 
+matrix:
+ include:
+  - php: 5.6
+    env: DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
+  - php: 5.6
+    env: DB=mysqli MOODLE_BRANCH=MOODLE_33_STABLE
+  - php: 7.0
+    env: DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
+  - php: 7.0
+    env: DB=mysqli MOODLE_BRANCH=MOODLE_33_STABLE
+
 before_install:
   - phpenv config-rm xdebug.ini
   - nvm install 8.9
