--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -37,18 +37,8 @@ jobs:
       fail-fast: false
       matrix:
         php: ['8.0', '8.1', '8.2']
-        moodle-branch: ['MOODLE_400_STABLE', 'MOODLE_401_STABLE', 'MOODLE_402_STABLE', 'MOODLE_403_STABLE', 'master']
+        moodle-branch: ['MOODLE_402_STABLE', 'MOODLE_403_STABLE', 'master']
         database: [pgsql, mariadb]
-        include:
-          - {moodle-branch: 'MOODLE_400_STABLE', php: '7.4', database: 'pgsql'}
-          - {moodle-branch: 'MOODLE_401_STABLE', php: '7.4', database: 'mariadb'}
-        exclude:
-          - {moodle-branch: 'MOODLE_400_STABLE', php: '8.1', database: 'pgsql'}
-          - {moodle-branch: 'MOODLE_400_STABLE', php: '8.1', database: 'mariadb'}
-          - {moodle-branch: 'MOODLE_400_STABLE', php: '8.2', database: 'pgsql'}
-          - {moodle-branch: 'MOODLE_400_STABLE', php: '8.2', database: 'mariadb'}
-          - {moodle-branch: 'MOODLE_401_STABLE', php: '8.2', database: 'pgsql'}
-          - {moodle-branch: 'MOODLE_401_STABLE', php: '8.2', database: 'mariadb'}
 
     steps:
       - name: Check out repository code
