--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -37,13 +37,15 @@ jobs:
       fail-fast: false
       matrix:
         php: ['8.1', '8.2', '8.3', '8.4']
-        moodle-branch: ['MOODLE_405_STABLE', 'MOODLE_500_STABLE', 'main']
+        moodle-branch: ['MOODLE_405_STABLE', 'MOODLE_500_STABLE', 'MOODLE_501_STABLE', 'main']
         database: [pgsql, mariadb]
         exclude:
           - {moodle-branch: 'MOODLE_405_STABLE', php: '8.4', database: 'pgsql'}
           - {moodle-branch: 'MOODLE_405_STABLE', php: '8.4', database: 'mariadb'}
           - {moodle-branch: 'MOODLE_500_STABLE', php: '8.1', database: 'pgsql'}
           - {moodle-branch: 'MOODLE_500_STABLE', php: '8.1', database: 'mariadb'}
+          - {moodle-branch: 'MOODLE_501_STABLE', php: '8.1', database: 'pgsql'}
+          - {moodle-branch: 'MOODLE_501_STABLE', php: '8.1', database: 'mariadb'}
           - {moodle-branch: 'main', php: '8.1', database: 'pgsql'}
           - {moodle-branch: 'main', php: '8.1', database: 'mariadb'}
 
